library_inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-inventory-service
  namespace: omar
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: library-inventory
