library_inventory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-inventory-ingress
  namespace: omar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: a377ff74223a6444786f1a862c203516-709584045.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-inventory-service
                port:
                  number: 5000
